--- a/Aula6.qmd
+++ b/Aula6.qmd
@@ -24,6 +24,10 @@ library(see)
 
 Nesta aula, consideramos o alfa = 0,05.
 
+# Teste T
+
+Para análises com dois grupos, com normalidade garantida, usa-se normalmente o teste T.
+
 ### Dois grupos independentes
 
 ```{r}
@@ -48,13 +52,15 @@ Para dois grupos independentes, com normalidade garantida, usa-se normalmente o 
 
 O box indica normalidade, de acordo com a simetria e dá uma ideia de variancia, por isso, para conjuntos com n \> ou = 8, o boxplot pode ser bom para viasualizar e fazer a estatística inferencial.
 
+*Observação: o boxplot para conjuntos com n \> ou = a 8 é bom para visualização e fazer a estatística inferencial (dá noção de normalidade, de acordo com a simetria, e da uma ideia de variância).*
+
 #### Teste T
 
 Função que roda o teste T: `t.test`
 
 Para o t.test precisa que os dados estejam no formato largo (a função pede os dados (tratamentos) em colunas separadas).
 
-Também precisa verificar: homogeneidade de variâncias e normalidade (Shapiro-wilk test).
+Também precisa verificar as premissas: homogeneidade de variâncias e normalidade (Shapiro-wilk test).
 
 ```{r}
 mg2 <- mg |> 
@@ -64,13 +70,13 @@ mg2 <- mg |>
 teste1 <- t.test(mg2$control, mg2$Mg2)
 ```
 
-Assummindo que o test T está ok (normalidade e variâncias homogêneas), como o p-valor foi muito menor que 0,05, pode-se rejeitar a hipótese nula (H0). Ou seja, existe um efeito de indução de resistência.
+Assummindo que o test T atende as premissas, como o p-valor foi muito menor que 0,05, pode-se rejeitar a hipótese nula (H0). Ou seja, existe um efeito de indução de resistência.
 
 Se o intervalo de confiança não inclui o 0, dá diferença.
 
 #### Teste de normalidade
 
-Pode ser feito visualmente, mas existe um teste que avalia a normalidade: shapiro.test No shapiro test a H0 = normalidade. Se p-value for maior do que 0,05, não rejeita H0, ou seja, assume normalidade. Se o p-valor for menor que 0,05, rejeita H0, então assume não normalidade.
+Pode ser feito visualmente, mas existe um teste que avalia a normalidade: shapiro.test. No shapiro test a H0 = normalidade. Se p-value for maior do que 0,05, não rejeita H0, ou seja, assume normalidade. Se o p-valor for menor que 0,05, rejeita H0, então assume que não apresenta normalidade.
 
 Como para os dois tratamentos foi maior 0,05, assume normalidade para os tratamentos.
 
@@ -84,7 +90,7 @@ shapiro.test(mg2$Mg2)
 hist(mg2$Mg2)
 ```
 
--   normalmente variáveis numéricas contínuas tendem a apresentar normalidade.
+*Normalmente variáveis numéricas contínuas tendem a apresentar normalidade*.
 
 Outra forma de verificar a normalidade:
 
@@ -95,17 +101,19 @@ qqline(mg2$control)
 
 #### Teste de variância
 
-H0 = as variâncias são homogêneas
+H0 = as variâncias são homogêneas.
 
-Como valor p é maior que 0,05, assume que são homogeneas
+Se p-value for maior do que 0,05, não rejeita H0, ou seja, assume que as variâncias são homogêneas (homocedasticidade). Se o p-valor for menor que 0,05, rejeita H0, então assume que as variâncias são heterogêneas (heterocedasticidade).
+
+Como valor p é maior que 0,05, assume que são homogêneas.
 
 ```{r}
 var.test(mg2$control, mg2$Mg2)
 ```
 
-Como as variancias e a normalidade estão okay, pode usar o teste T normalmente (tipico caso de análise paramétrica).
+Como as variâncias são homogêneas e a normalidade são atendidas, pode usar o teste T normalmente (tipico caso de análise paramétrica).
 
-Caso a variancia fosse heterogênea, poderia utilizar o teste T, porém deve informar que as variancias são heterogeneas:
+Caso a variância fosse heterogênea, poderia utilizar o teste T, porém deve informar que as variâncias são heterogêneas:
 
 ```{r}
 t.test(mg2$control, mg2$Mg2,
@@ -122,7 +130,7 @@ report(teste1)
 
 ### Dois grupos dependentes
 
-Dependencia: mesmo avaliador em tempos diferentes
+Dependência: exemplo: mesmo avaliador em tempos diferentes, ou avaliação com escala e sem escala feita pelo mesmo avaliador em momentos diferentes.
 
 ```{r}
 escala <- gsheet2tbl("https://docs.google.com/spreadsheets/d/1bq2N19DcZdtax2fQW9OHSGMR0X2__Z9T/edit#gid=1729131173")
@@ -174,9 +182,11 @@ H0 = apresenta normalidade Normalidade okay (p-valor \> 0,05, ou seja, aceita H0
 var.test(escala2$Unaided, escala2$Aided1)
 ```
 
-H0 = variâncias são homogêneas Variâncias são heterogêneas (p-value \< 0,05, rejeita H0)
+H0 = variâncias são homogêneas.
 
-### Teste não paramétrico
+Variâncias são heterogêneas (p-value \< 0,05, rejeita H0)
+
+# Teste não paramétrico
 
 Houve uma modificação nos dados (Escala) para que fiquem não paramétricos.
 
@@ -224,17 +234,14 @@ Como o p-valor é menor que 0,05, rejeita H0, dessa forma as médias são difere
 
 Se os dados não atenderem as pressimas para análise paramétrica, pode-se usar um teste não paramétrico, ou, fazer a transformação dos dados, para que esses valores transformados possam atender as premissas. Porém, ao se usar os dados transformados, não está usando os dados originais (não está errado, é apenas uma metodologia diferente).
 
-t.test -\> pareado (paired = "TRUE") -\> não-pareado (paired = "FALSE" - não precisa porque já assume isso)
+t.test =\> pareado (paired = "TRUE") não-pareado (paired = "FALSE" - não precisa porque já assume isso)
 
-```         
-   -> variâncias homogêneas (var.equal = TRUE - não precisa porque já assume isso)
-   -> variâncias heterogêneas (var.equal = FALSE)
-   
-```
+var.test =\>\
+variâncias homogêneas (var.equal = TRUE - não precisa porque já assume isso) variâncias heterogêneas (var.equal = FALSE)
 
-wilcox.test -\> pareado (paired = TRUE) não-pareado (paired = FALSE) = Mann-Whitney test
+wilcox.test =\> pareado (paired = TRUE) não-pareado (paired = FALSE) = Mann-Whitney test
 
-### Três ou mais grupos
+# Três ou mais grupos
 
 ANOVA: Hipótese alternativa é que pelo menos uma média é diferente das outras. Mas não diz qual média é diferente das outras, para isso, usa o teste de comparação de médias. H0 = as médias não diferem.
 
@@ -262,7 +269,9 @@ Visualmente: parece que a dispersão dos dados é muito grande, dessa forma não
 
 Teste F: é a razão da variância entre os grupos sobre a variância dentro dos grupos.
 
-#### Teste Anova
+# Teste Anova
+
+1º: Ajusta ANOVA 2º: trabalha com resíduos da ANOVA (aplica os testes)
 
 ```{r}
 m1 <- lm(tcm ~especie, data = micelial)
@@ -271,9 +280,9 @@ anova(m1)
 summary(m1)
 ```
 
-DF = grau de liberdade Sum Sq = é a soma dos quadrados Mean SQ = média da soma dos quadrados (variância) F value (valor F) = variância da espécie/média de residuals Quanto \> o F, \< o p-valor
+DF = grau de liberdade Sum Sq = é a soma dos quadrados Mean SQ = média da soma dos quadrados (variância) F value (valor F) = variância da espécie/média de residuals Quanto maior o F, menor o p-valor
 
-Como p-valor \> 0,05 (0,055), não descartamos H0, ou seja, não a diferença entre as médias. Ou seja, não há diferença entre o crescimento micelial das espécies.
+Como p-valor \> ou = 0,05 (0,055), não descartamos H0, ou seja, não a diferença entre as médias. Ou seja, não há diferença entre o crescimento micelial das espécies.
 
 Para retirar o intercepto e dar os valores médios direto
 
@@ -309,7 +318,7 @@ anova(m1)
 summary(m1) #<- visualiza a diferença entre os grupos
 ```
 
-Como valor-p \< 0,05 (2.028e-07), rejeitamos H0, dessa forma, pelo menos uma espécie difere das outras.
+Como valor-p foi menor que 0,05 (2.028e-07), rejeitamos H0, dessa forma, pelo menos uma espécie difere das outras.
 
 -   o summary compara a média de todos com asiaticus (intercepto) e não de todos contra todos.
 
@@ -390,7 +399,7 @@ bartlett.test(count ~ spray,
 
 Os resíduos parecem ter normalidade visualizando pelo histograma. AO fazer o shapiro.test, vê-se que não tem normalidade, pq o p-valor \< 0,05, então rejeita H0 (H0 = normalidade).
 
-Mais grave: variâncias não serem homogêneas, do que normalidade.
+Mais grave: variâncias não serem homogêneas, do que normalidade não ser atendida.ANOVA é um teste mais robusto à falta de normalidade do que à heterocedasticidade.
 
 ```{r}
 library(performance)
@@ -403,7 +412,9 @@ plot(simulateResiduals(m1))
 
 Com ***performance*** e **DHARma**, foi possível ver que não tem normalidade e que as variâncias são heterogêneas. O DHARma faz o outro test (KS test) -- saída das variâncias com texto em vermelho indica que as variâncias são heterogêneas.
 
-Tranformações mais comuns: log de x (quando tem 0, adiciona a constante + 0,5) raiz quadrada de x arc seno de x
+Tranformações mais comuns: log de x (quando tem valor igual a 0, adiciona-se uma constante, por exemplo, +0,5), raiz quadrada de x, arc seno de x
+
+# Premissas não atendidas
 
 ### Alternativa 1: fazer a transformação dos dados
 
@@ -473,7 +484,7 @@ pairs(m2_medias)
 
 Utilizando o pwpm mostrou a comparação entre cada um dos grupos (comparação par a par). Quando o valor (é igual ao p-valor) é \< 0,05, diz que são de grupos diferentes (rejeita H0), enquanto valor \> 0,05, pertencem ao mesmo grupo (não rejeita H0).
 
-#### Testando outras formas de transformação
+#### Testando outras formas de transformação: box
 
 Box-Cox: y(lambda) = (x\^lambda -1)/lambda lambda é o valor de x onde o y é máximo Sempre que o lambda = 0,5 é igual a raiz quadrado
 
@@ -502,9 +513,9 @@ bartlett.test(count3 ~spray,
 # é uma forma de estabilizar variância também
 ```
 
-### Alternativa 2: teste não paramétrico
+### Alternativa 2: teste não paramétrico: Kruskal test
 
-Usa saída original (sem transformar). Faz um rankeamento.
+Usa saída original (sem transformar). Faz um rankeamento. Utiliza o teste Kruskal-wallis. Nele, H0 = médias são iguais. Quando rejeita H0 (p-valor menor que 0,05) pelo menos uma média difere das demais.
 
 ```{r}
 library(agricolae)
@@ -526,7 +537,7 @@ modelo linear generalizado = glm. É o modelo menos criticado (entre os transfor
 
 ### Alternativa 3: GLMs
 
-Distribuição de dados contagem (numérica discreta): poisson se ajusta também a essa distribuição (de 0 para cima)
+Modelos lineares generalizados é o modelo menos criticado (entre a transformação dos dados e o uso de não paramétricos). Utiliza a distribuição apropriada para os dados. Exemplo, para dados contagem (numérica discreta): a distribuição de Poisson se ajusta bem a essa distribuição (de 0 para cima).
 
 ```{r}
 # glm com a familia gaussiana reduz a lm
@@ -551,11 +562,13 @@ m4_medias <- emmeans(m4, ~spray,
 cld(m4_medias)
 ```
 
-Anova: tem um que é diferente dos outros (p-valor \<0,05). Os grupos com o GLM foram iguais às outras alternativas (dados transformados e não-paramétrico)
+Anova: tem um que é diferente dos outros (p-valor maior ou igual a 0,05). Os grupos com o GLM foram iguais às outras alternativas (dados transformados e não-paramétrico)
 
-## Anova 2 fatores = Modelo fatorial (two-way anova)
+# Anova 2 fatores = Modelo fatorial (two-way anova)
 
-#### Importa os dados
+Quando tem interação significativa entre os fatores tem que se estimar as médias de um dentro do outro (combinação dos fatores). Letras maiúsculas comparam as colunas e as minusculas comparam as linhas.
+
+## Importa os dados
 
 ```{r}
 theme_set(theme_bw())
@@ -573,7 +586,7 @@ li |>
   geom_jitter(width = 0.05)
 ```
 
-### Anova
+## Anova
 
 ```{r}
 mf <- lm(severity ~treat*factor(dose),
@@ -582,15 +595,15 @@ mf <- lm(severity ~treat*factor(dose),
 anova(mf)
 ```
 
-treat:dose = interação Interação significativa: tem que estimar as médias de um dentro do outro (combinação dos fatores). São quatro valores médios (LI-0,5, LI-2,0, TEB-0,5 e TEB-2,0 = 4 médias). Letras maiusculas comparam as colunas e as minusculas comparam as linhas
+treat:dose = interação
 
-```         
-      0,5             2,0
-```
+Interação significativa: tem que estimar as médias de um dentro do outro (combinação dos fatores). São quatro valores médios (LI-0,5, LI-2,0, TEB-0,5 e TEB-2,0 = 4 médias). Letras maiusculas comparam as colunas e as minusculas comparam as linhas
 
-LI Média Aa Média Ab TEB Média Ba Média Aa
+EXEMPLO:
 
-#### Testar as premissas
+![](images/1.png)
+
+### Testar as premissas
 
 ```{r}
 plot(simulateResiduals(mf))
@@ -605,28 +618,20 @@ check_homogeneity(mf)
 
 Utilizando o performance, os resultados foram o contrário do DHArma, mas o Dharma é mais confiável, então vamos prosseguir.
 
-#### COMPARAR AS COLUNAS
+### COMPARAR AS COLUNAS
 
 ```{r}
 mf_medias <- emmeans(mf, ~ treat | dose)
 cld(mf_medias)  #para mostrar os grupos
 ```
 
-```         
-         DOSES
-```
+![](images/2.png)
 
-TREAT 0,5 \| 2,0 LI \| 0,29 A \| 0,05 A TEB \| 0,02 B \| 0,02 A
-
-####COMPARAR AS LINHAS
+### COMPARAR AS LINHAS
 
 ```{r}
 mf_medias <- emmeans(mf, ~ dose | treat)
 cld(mf_medias)
 ```
 
-```         
-         DOSES
-```
-
-TREAT\| 0,5 \| 2,0 LI \| 0,29 Aa \| 0,05 Ab TEB \| 0,02 Ba \| 0,02 Aa
+![](images/3.png)
